--- a/style.css
+++ b/style.css
@@ -20,3 +20,36 @@
     overflow: hidden;
     background-color:blue ;
 }
+
+.container{
+    border: none;
+    border-right: 10px;
+    display: grid;
+    grid-template-columns: 50%50%;
+    margin: 60px 70px;
+}
+.down{
+    color: white;
+    background-color: blue;
+    border-radius: 24px;
+    width: 30%;
+    height: 60px;
+}
+#img{
+    width: 15%;
+}
+img{
+    width: 60%;
+}
+h3{
+    color: blue;
+}
+h1{
+    font-size: 70px;
+}
+p{
+    font-size: 20px;
+}
+#box{
+    margin-left: 35%;
+}
